--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
   <div class="header">
     <h1>The experimental photo project</h1>
     <p><b>Maria Fernanda Martinez</b></p>
-    <a id="headerLink" href="tp5.html">Go to the main page</a>
+    <a id="headerLink" href="index.html">Go to the main page</a>
   </div>
     
   <!-- Photo Grid -->
