--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="header">
 		<h1 style="text-align:center;">Welcome to my lovely page</h1>
-		<p>Maria Fernanda Martinez</p>
+		<p><b>Maria Fernanda Martinez</b></p>
 		<a id="headerLink" href="page2.html">Click here to see my photo project</a>
 	</div>
 	
