--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <div class="header">
     <h1>The experimental photo project</h1>
-    <p><b>Maria Fernanda Martinez</b></p>
+    <p>Maria Fernanda Martinez</p>
     <a id="headerLink" href="index.html">Go to the main page</a>
   </div>
     
